# BMS_Code

./: .gitignore  .gitmodules  .project  README.md  SConstruct  bms.elf  bms.jdebug  bmstest.elf  main.elf  rtos.elf  tasks.txt  temps.py  writeup.txt
board/: BMS.mex  bms.mex  board.mex  clock_config.c  clock_config.h  pin_mux.c
board/board/: clock_config.c  clock_config.h  pin_mux.c
demo/: mainDemo.cpp.old  mainOld.c
doc/: .LTC6811.pdf.icloud
make/: CMakeLists.txt  MKE18F512xxx16_flash.ld  Makefile  build_debug.sh
poc/: main.c
source/: CanMessage.cpp  CanMessage.h  FreeRTOSConfig.h  MKELibrary.cpp  StateMachine.cpp  StateMachine.h  actions.cpp  actions.h  adcObject.cpp  adcObject.h  bms.cpp  bms.h  bmsCommand.c  bmsCommand.cpp  bmsCommand.h  bmsHealth.cpp  bmsHealth.h  bmsutil.cpp  bmsutil.h  cache.h  commandSend.cpp  common.h  defines.h  drivers.cpp  drivers.h  fault.h  i2cTransaction.cpp  io.cpp  io.h  ltcutility.cpp  ltcutility.h  machines.cpp  machines.h  main.cpp  main.h  taskManager.cpp  taskManager.h  temps.h  transaction.cpp  transaction.h  (+2 more)
source/test/: commandSend.cpp  commandSend.h  testroutines.h
source_old/: actions.cpp  actions.h  bms.cpp  cache.h  defines.h  drivers.cpp  drivers.h  ltcutility.cpp  ltcutility.h
